home, viñetas, texto, filtro estilos y redirección a grupos filter

--- a/src/app/components/estilos/estilos.component.html
+++ b/src/app/components/estilos/estilos.component.html
@@ -1,25 +1,73 @@
 
 <div class="container-fluid p-4">
     <div class="row ">
-        <div class="box col-md-6 col-xxl-4">
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:Rock">
             <h2>Rock</h2>
             <img src="https://www.espectaculosbcn.com/wp-content/uploads/2019/05/mejores-grupos-de-rock-espa%C3%B1ol-1.jpg" width="50%">
         </div>
 
-        <div class="box col-md-6 col-xxl-4">
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:Punk">
+            <h2>Punk</h2>
+            <img src="https://www.ecured.cu/images/8/8f/Punkrock.jpg" width="30%">
+
+        </div>
+
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:SKA">
+            <h2>SKA</h2>
+            <img src="http://www.biggigbag.com/archivos/articulos/ska.gif" width="50%">
+        </div>
+        
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:Metal">
+            <h2>Metal</h2>
+            <img src="https://i2.wp.com/www.periodismo.com/wp-content/subid/160117.gif?fit=620%2C400&ssl=1" width="50%">
+        </div>
+
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:Jazz">
             <h2>Jazz</h2>
+            <img src="https://www.alejandromercado.com/wp-content/uploads/2020/04/IMG_2022.jpg" width="50%">
+        
         </div>
 
-        <div class="box col-md-6 col-xxl-4">
-            <h2>Reage</h2>
-        </div>
-
-        <div class="box col-md-6 col-xxl-4">
-            <h2>EDM</h2>
-        </div>
-
-        <div class="box col-md-6 col-xxl-4">
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:Soul">
             <h2>Soul</h2>
+            <img src="http://www.culturamas.es/wp-content/uploads/2011/05/TAMI_supremes.jpg" width="60%">
         </div>
+
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:Blues">
+            <h2>Blues</h2>
+            <img src="http://1.bp.blogspot.com/-3zmTGIl7VwQ/Tl56NOTbtUI/AAAAAAAAACU/Z_h87lOuAnk/s320/B_B__King_3011710047.jpg" width="50%">
+        </div>
+
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:Swing">
+            <h2>Swing</h2>
+            <img src="https://www.grupomotiva.es/wp-content/uploads/2018/09/swing-1024x576.jpg" width="50%">
+
+        </div>
+
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:Pop">
+            <h2>Pop</h2>
+            <img src="http://musicandote.com/wp-content/uploads/2013/12/pop.jpg" width="70%">
+        </div>
+
+
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:Techno">
+            <h2>Techno</h2>
+            <img src="https://i0.wp.com/thehappening.com/wp-content/uploads/2017/01/techno-medicina-4.jpg?w=1024&ssl=1" width="50%">
+        </div>
+
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:House">
+            <h2>House</h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSouVBaLruVKVP1y60Lj17wyKQvUqNS7RNQZd93_7aKQN_loJ_btRaYexximXnWdYCPELk&usqp=CAU" width="65%">
+
+        </div>
+
+        <div class="box col-md-6 col-xxl-4" routerLink="/grupos/:Jungle">
+            <h2>Jungle</h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRg4rPRIpf781bLkCxusE5Gjj0IubVXcJM7zKCqgMm-rTiXzkHl_Yd3KMYo3cOPxZZVyQA&usqp=CAU" width="40%">
+
+        </div>
+
+
+
     </div>
 </div>
