--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid mt-4">
+<div class="container-fluid mt-4 ml-4">
     <div class="row">
 
         <div class="col-md-4 pt-5">
@@ -33,7 +33,7 @@
                 <li><a class="text-decoration-none" href="#">Sport Shoes</a></li>
             </ul>
         </div>
--->
+
         <div class="col-md-8  pt-5">
             <h2 class="h2 text-light border-bottom pb-3 border-light">Further Info</h2>
             <ul class="list-unstyled text-light footer-link-list">
@@ -85,3 +85,4 @@
         </div>
     </div>
 </div>
+-->
