--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,17 +18,25 @@
                 
             </div>
             <div class="presentacion col-xs-12 col-md-12 col-lg-6 col-xxl-6">
-                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
-                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
-                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
-
+                <p>
+                    Somos un grupo pequeño, que se ha unido desde hace la juventud, nos dio el gusanillo
+                por la música cuando fuimos a varios conciertos en nuestro pueblo. Empezamos a aprener
+                los instrumentos por nuestra cuenta, y empezamos a tocar en locales de nuestro El bonillo.
+                </p>
+                <p>
+                    Actualmente tenemos la suerte de que podemos tocar en locales de distintas localidades, pero
+                    sería un sueño poder tocar en grandes salas y oírnos en la radio.
+                </p>
+                
             </div>
                         
                         
                
         </div>
 
-cuenta
+
+<!-- Carousel por mi cuenta
+
     <carousel [cellsToShow]="5" [loop]="true"  [autoplay]="true" [autoplayInterval]="4000" [pauseOnHover]="true" class="carousel-inner">
         <div class="carousel-item active">
             <div class="caja1">
@@ -77,82 +85,82 @@ cuenta
         </div>
     </carousel>
     
-
+-->
     <h3 class="mt-4">Novedades</h3>
     <div class="row m">
         <h4 mb-2>Rock</h4>
         <carousel [cellsToShow]="5" [loop]="true"  [autoplay]="true" [autoplayInterval]="4000" [pauseOnHover]="true" class="border-1px-solid-yellow">
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC1</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada11" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="200px">
+                        <div class="titulo1">AC DC1</div>
                     </div>
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC2</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada11" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC2</div>
                     </div>
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
             </div>
 
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://static.guiainfantil.com/uploads/navidad/ninos-cantan-villancico-p.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-cell">
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://static.guiainfantil.com/uploads/navidad/ninos-cantan-villancico-p.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
             </div>
@@ -165,75 +173,75 @@ cuenta
         <h4 mb-2>Jazz</h4>
         <carousel [cellsToShow]="5" [loop]="true"  [autoplay]="true" [autoplayInterval]="4000" [pauseOnHover]="true" class="border-1px-solid-yellow">
                        <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC1</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC1</div>
                     </div>
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC2</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC2</div>
                     </div>
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
             </div>
 
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="caja">
-                    <div class="disco">
-                        <img  class="portada" src="https://static.guiainfantil.com/uploads/navidad/ninos-cantan-villancico-p.jpg" alt="novedad" width="100%">
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-cell">
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo1">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja1">
+                    <div class="disco1">
+                        <img  class="portada11" src="https://static.guiainfantil.com/uploads/navidad/ninos-cantan-villancico-p.jpg" alt="novedad" width="100%">
                         <div class="titulo">AC DC3</div>
                     </div>
                 </div>
