--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,12 +1,19 @@
 .container-fluid{
     background-color:#a52a2a;
+    
 
     .titulo{ 
+        margin-left:90px;
         font-size:50px;
         margin-left:0px;
         color:white;
         /*el código de abajo es borde del texto negro*/
         text-shadow: 3px 3px 3px #000000;
+    }
+
+    a{
+        color:white;
+        font-weight:bold;
     }
 }
 
