--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,7 +16,6 @@
                 height:auto;
                 position:relative;
                 overflow:hidden;
-                border:1px solid yellow;
                 
             
                 
@@ -24,8 +23,7 @@
                 .portada{
                     width:100%;
                     height:100%;
-                    border:1px solid green;
-                    
+  
                 }
                 
                 .titulo{
@@ -39,7 +37,7 @@
                     color:white;
                     width:100%;
                     justify-content:center;
-                    font-size:20px;
+                    font-size:25px;
                     align-items:center;
                     font-weight: bold;
 
@@ -56,11 +54,11 @@
         
         
     .disco1{
-        //width:100%;
+        width:100%;
         height:200px;
         position:relative;
         overflow:hidden;
-        border:1px solid yellow;
+        
         
     
         
@@ -68,20 +66,19 @@
         .portada1{
             width:100%;
             height:100%;
-            border:1px solid green;
             
         }
         
         .titulo1{
             display:block;
             position:absolute;
-            bottom:0px;
+            bottom:13px;
             background:rgba(0, 0, 0, 0.418);
             height:15%;
-            padding:5px;
+            //padding:5px;
             padding-left:15px;
-            //padding-bottom:0px;
-            color:blue;
+            padding-bottom:20px;
+            color:white;
             width:100%;
             justify-content:center;
             font-size:20px;
