--- a/src/app/components/grupos/grupos.component.scss
+++ b/src/app/components/grupos/grupos.component.scss
@@ -23,6 +23,7 @@
             background:rgba(0, 0, 0, 0.418);
             height:15%;
             padding:5px;
+            padding-bottom: 40px;
             padding-left:15px;
             color:white;
             width:100%;
