--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -17,6 +17,7 @@
                 <li>
                     <i class="fa fa-envelope fa-fw"></i>
                     <a class="text-decoration-none" href="mailto:info@company.com">info@company.com</a>
+                    <div><a href="/politica-privacidad" target="_blank">Politica de privacidad y Cookies</a></div>
                 </li>
             </ul>
         </div>
