--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,8 +10,8 @@
             <div class="disco col-xs-12 col-md-12 col-lg-6 col-xxl-6" >
                 <div class="caja">
                     <div class="disco">
-                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC</div>
+                        <img  class="portada" src="https://i2.wp.com/www.infolinares.com/wp-content/uploads/2019/04/nevada.jpg" alt="novedad" width="100%">
+                        <div class="titulo">One Flow</div>
                     </div>
                 </div>
                 
@@ -93,23 +93,23 @@
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada11" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="200px">
-                        <div class="titulo1">AC DC1</div>
+                        <img  class="portada1" src="https://www.publicdomainpictures.net/pictures/220000/nahled/rock-concert-1494235506Xle.jpg" alt="novedad">
+                        <div class="titulo1">Strag</div>
                     </div>
                 </div>
             </div>
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada11" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo1">AC DC2</div>
+                        <img  class="portada1" src="https://www.tiposde.com/wp-content/uploads/tipos-de-rock-600x338.jpg" alt="novedad">
+                        <div class="titulo1">Mende</div>
                     </div>
                 </div>
             </div>
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <img  class="portada1" src="https://sentidoradio.com/wp-content/uploads/2019/06/Rock-Cl%C3%A1sico-6-640x392.jpg" alt="novedad">
                         <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <img  class="portada1" src="https://imagenes.20minutos.es/files/image_656_370/uploads/imagenes/2019/02/22/160230.jpg" alt="novedad">
                         <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <img  class="portada1" src="https://img.culturacolectiva.com/content/2017/04/grandes-canciones-de-hard-rock-daisies.jpg" alt="novedad" >
                         <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
@@ -134,36 +134,14 @@
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <img  class="portada1" src="https://img.culturacolectiva.com/content/2015/12/Ex-Hex-medium.jpg" alt="novedad" >
                         <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
             </div>
 
-            <div class="carousel-cell">
-                <div class="caja1">
-                    <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo1">AC DC3</div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-cell">
-                <div class="caja1">
-                    <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo1">AC DC3</div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-cell">
-                <div class="caja1">
-                    <div class="disco1">
-                        <img  class="portada1" src="https://static.guiainfantil.com/uploads/navidad/ninos-cantan-villancico-p.jpg" alt="novedad" width="100%">
-                        <div class="titulo1">AC DC3</div>
-                    </div>
-                </div>
-            </div>
+            
+            
         </carousel>
     </div>
     
@@ -172,18 +150,11 @@
     <div class="row justify-content-center">
         <h4 mb-2>Jazz</h4>
         <carousel [cellsToShow]="5" [loop]="true"  [autoplay]="true" [autoplayInterval]="4000" [pauseOnHover]="true" class="border-1px-solid-yellow">
-                       <div class="carousel-cell">
-                <div class="caja1">
-                    <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo1">AC DC1</div>
-                    </div>
-                </div>
-            </div>
+    
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <img  class="portada1" src="https://live.staticflickr.com/65535/49340928367_557a5f44ed_b.jpg" alt="novedad" >
                         <div class="titulo1">AC DC2</div>
                     </div>
                 </div>
@@ -191,7 +162,7 @@
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <img  class="portada1" src="http://cherwell.org/wp-content/uploads/2021/05/2013-01misc-160-2074-jazz_rally_2013_-_deep_schrott.jpg" alt="novedad">
                         <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
@@ -200,7 +171,7 @@
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <img  class="portada1" src="https://photo.m-j-s.net/blog/uploads/2017/12/2014-01misc-162-3251-jazz_rally_2014_-_european_jazz_trio_1-1024x683.jpg" alt="novedad">
                         <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
@@ -208,7 +179,7 @@
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <img  class="portada1" src="https://p1.pxfuel.com/preview/297/927/678/clarinetist-clarinet-jazz-concert.jpg" alt="novedad">
                         <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
@@ -216,36 +187,22 @@
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad">
                         <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
             </div>
 
+         
             <div class="carousel-cell">
                 <div class="caja1">
                     <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <img  class="portada1" src="https://p1.pxfuel.com/preview/457/862/529/drummer-jazz-musician-drums-instrument-drum.jpg" alt="novedad">
                         <div class="titulo1">AC DC3</div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-cell">
-                <div class="caja1">
-                    <div class="disco1">
-                        <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                        <div class="titulo1">AC DC3</div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-cell">
-                <div class="caja1">
-                    <div class="disco1">
-                        <img  class="portada11" src="https://static.guiainfantil.com/uploads/navidad/ninos-cantan-villancico-p.jpg" alt="novedad" width="100%">
-                        <div class="titulo">AC DC3</div>
-                    </div>
-                </div>
-            </div>
+            
         </carousel>
     </div>
 </div>
