--- a/src/app/miniprofile/miniprofile.component.html
+++ b/src/app/miniprofile/miniprofile.component.html
@@ -1,5 +1,7 @@
 <div class="row" *ngFor="let item of userGroup"> 
     <h1>Nombre artistico: {{item.nombre}}</h1>
+    <br>
+    <h5>Estilo musical: {{item.estiloMusical}}</h5>
     <h3>Portada del grupo</h3>
     <img src="{{item.foto}}" alt="" width="80%">
  
