--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,1 +1,1 @@
-<p>error works!</p>
+<img src="https://www.webempresa.com/wp-content/uploads/2017/05/error-404-ejemplo-pagina-no-encontrada.jpg" alt="error">
