--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -55,7 +55,7 @@
         
     .disco1{
         width:100%;
-        height:200px;
+        height:auto;
         position:relative;
         overflow:hidden;
         
@@ -64,20 +64,20 @@
         
     }
         .portada1{
-            width:100%;
-            height:100%;
+            width: 100% !important;
+            height: 100% !important;
             
         }
         
         .titulo1{
             display:block;
             position:absolute;
-            bottom:13px;
+            bottom:0px;
             background:rgba(0, 0, 0, 0.418);
             height:15%;
             //padding:5px;
             padding-left:15px;
-            padding-bottom:20px;
+            padding-bottom:40px;
             color:white;
             width:100%;
             justify-content:center;
