--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -110,7 +110,7 @@
                 <div class="caja1">
                     <div class="disco1">
                         <img  class="portada1" src="https://sentidoradio.com/wp-content/uploads/2019/06/Rock-Cl%C3%A1sico-6-640x392.jpg" alt="novedad">
-                        <div class="titulo1">AC DC3</div>
+                        <div class="titulo1">Brick against the wall</div>
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                 <div class="caja1">
                     <div class="disco1">
                         <img  class="portada1" src="https://imagenes.20minutos.es/files/image_656_370/uploads/imagenes/2019/02/22/160230.jpg" alt="novedad">
-                        <div class="titulo1">AC DC3</div>
+                        <div class="titulo1">Fren</div>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                 <div class="caja1">
                     <div class="disco1">
                         <img  class="portada1" src="https://img.culturacolectiva.com/content/2017/04/grandes-canciones-de-hard-rock-daisies.jpg" alt="novedad" >
-                        <div class="titulo1">AC DC3</div>
+                        <div class="titulo1">Los cinco</div>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                 <div class="caja1">
                     <div class="disco1">
                         <img  class="portada1" src="https://img.culturacolectiva.com/content/2015/12/Ex-Hex-medium.jpg" alt="novedad" >
-                        <div class="titulo1">AC DC3</div>
+                        <div class="titulo1">Las mistel</div>
                     </div>
                 </div>
             </div>
@@ -155,7 +155,7 @@
                 <div class="caja1">
                     <div class="disco1">
                         <img  class="portada1" src="https://live.staticflickr.com/65535/49340928367_557a5f44ed_b.jpg" alt="novedad" >
-                        <div class="titulo1">AC DC2</div>
+                        <div class="titulo1">Orquesta sinfin</div>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 <div class="caja1">
                     <div class="disco1">
                         <img  class="portada1" src="http://cherwell.org/wp-content/uploads/2021/05/2013-01misc-160-2074-jazz_rally_2013_-_deep_schrott.jpg" alt="novedad">
-                        <div class="titulo1">AC DC3</div>
+                        <div class="titulo1">Sanss</div>
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                 <div class="caja1">
                     <div class="disco1">
                         <img  class="portada1" src="https://photo.m-j-s.net/blog/uploads/2017/12/2014-01misc-162-3251-jazz_rally_2014_-_european_jazz_trio_1-1024x683.jpg" alt="novedad">
-                        <div class="titulo1">AC DC3</div>
+                        <div class="titulo1">The Wave</div>
                     </div>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                 <div class="caja1">
                     <div class="disco1">
                         <img  class="portada1" src="https://p1.pxfuel.com/preview/297/927/678/clarinetist-clarinet-jazz-concert.jpg" alt="novedad">
-                        <div class="titulo1">AC DC3</div>
+                        <div class="titulo1">White hat</div>
                     </div>
                 </div>
             </div>
@@ -194,14 +194,7 @@
             </div>
 
          
-            <div class="carousel-cell">
-                <div class="caja1">
-                    <div class="disco1">
-                        <img  class="portada1" src="https://p1.pxfuel.com/preview/457/862/529/drummer-jazz-musician-drums-instrument-drum.jpg" alt="novedad">
-                        <div class="titulo1">AC DC3</div>
-                    </div>
-                </div>
-            </div>
+        
             
         </carousel>
     </div>
