--- a/src/app/components/tablon/tablon.component.scss
+++ b/src/app/components/tablon/tablon.component.scss
@@ -1,4 +1,4 @@
-.container{
+/*.container{
     font-family:arial,sans-serif;
     font-size:100%;
     margin:3em;
@@ -105,4 +105,4 @@
     img{
         width:30%;
     }
-}
+}*/
