--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,1 +1,5 @@
-<img src="https://www.webempresa.com/wp-content/uploads/2017/05/error-404-ejemplo-pagina-no-encontrada.jpg" alt="error">
+<div class="container mt-4">
+    <div class="row">
+        <img src="https://www.webempresa.com/wp-content/uploads/2017/05/error-404-ejemplo-pagina-no-encontrada.jpg" alt="error">
+    </div>
+</div>
